test/types/range/diten/badRange2.good
badRange2.chpl:5: error: parallel iteration is not currently supported over ranges without bounds
